[pbr]
skip_authors = true
skip_changelog = true

[metadata]
name = maasjuju_toolkit
author = Aggelos Kolaitis
author-email = akolaitis@admin.grnet.gr
summary = A collection of scripts for managing a MaaS/Juju installation
description-file = README.md

[files]
packages =
    maasjuju_toolkit


[entry_points]
console_scripts =
    mjt_refresh = maasjuju_toolkit.refresh:main

    mjt_ipmi_sel = maasjuju_toolkit.maas.ipmi_sel:main
    mjt_script_results = maasjuju_toolkit.maas.script_results:main

    mjt_add_tags = maasjuju_toolkit.maas.add_tags:main

    mjt_get_ipmi_info = maasjuju_toolkit.maas.get_ipmi_info:main
    mjt_get_machine = maasjuju_toolkit.maas.get_machine:main

    mjt_update_host_name = maasjuju_toolkit.maas.update_host_name:main
    mjt_update_domain_name = maasjuju_toolkit.maas.update_domain_name:main
    mjt_update_hardware_info = maasjuju_toolkit.maas.update_hardware_info:main

    mjt_check_script_results = maasjuju_toolkit.nagios.check_script_results:main
    mjt_juju_nagios_deps = maasjuju_toolkit.juju.nagios_deps:main
